--- a/flaskr/templates/main.html
+++ b/flaskr/templates/main.html
@@ -12,8 +12,8 @@
 
         <div class="row text-center">
           <div class="col-md-12">  
-            <img src="../static/viki_avatar.png" height="162" width="162"/>
-            <h1><b>{{ pages[0] }}</b></h1> 
+            <img src="../static/burger.png" height="162" width="162"/>
+            <h1><b>{{ pages[0] }}</b></h1>
           </div>
         </div>
        
@@ -25,7 +25,7 @@
             <div id="suggestion" class=""><span id="suggestionSpan">Suggestion</span></div>         
             <div>
               
-            <div style="border:solid;" id="inputBtn">Talk to Viki</div>
+            <div id="inputBtn">Talk</div>
             <div id="recommendedTopics">
               
             </div>
@@ -84,7 +84,7 @@
 
       <div class="row text-center">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <p id="copyrightText">&#169; Lyubomir Mihaylov</p>
+          <p id="copyrightText">&#169; Lyubomir Mihaylov 2024</p>
         </div>
       </div>
       
