improved NB accuracy

--- a/flaskr/templates/main.html
+++ b/flaskr/templates/main.html
@@ -21,7 +21,7 @@
           <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
           <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10" style="border:none;">            
             <!-- <input type="text" name="userInput" id='userInput' autofocus><br><br> -->
-            <textarea type="text" name="userInput" id='userInput' placeholder="Talk to Viki..." autofocus></textarea><br><br>
+            <textarea type="text" name="userInput" id='userInput' spellcheck="false"  placeholder="Talk to Viki..." autofocus></textarea><br><br>
             <div id="suggestion" class=""><span id="suggestionSpan">Suggestion</span></div>         
             <div>
               
